# work_c

./: README.md  no1.cpp  no2.cpp  phonebook.db
PhoneBook/: CMakeLists.txt  PhoneBook.pro  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  phonebook.db
build-PhoneBook/: CMakeCache.txt  Makefile  cmake_install.cmake
build-PhoneBook/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-PhoneBook/PhoneBook_autogen/: deps  moc_predefs.h
build-PhoneBook/PhoneBook_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
